--- a/abacml/pom.xml
+++ b/abacml/pom.xml
@@ -37,7 +37,7 @@
           <classesDirectory>target/classes</classesDirectory>
           <archive>
             <manifest>
-              <mainClass>com.yasusoft.abacml.App</mainClass>
+              <mainClass>com.yasusoft.abacml.ABACML</mainClass>
               <useUniqueVersions>false</useUniqueVersions>
               <addClasspath>true</addClasspath>
               <classpathPrefix>libs</classpathPrefix>
